--- a/src/styles/question.css
+++ b/src/styles/question.css
@@ -4,13 +4,12 @@
 
 
 }
-
 .question__body {
     display: flex;
     flex-direction: column;
     border-radius: 0vh 2vh;
     font-size: 2.3vh;
-    color: white;
+    color: rgb(240, 238, 238);
     height: 90vh;
     padding-top: 3.2vh;
 }
